# inferno

./: .env.example  .gitignore  README.md  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/admin/: package.json  project.json
apps/admin/public/: index.html
apps/admin/src/: routes.js
apps/admin/src/components/Dashboard/: Intro.js
apps/admin/src/components/Footer/: Footer.js
apps/admin/src/components/Navbars/: AdminNavbar.js
apps/admin/src/views/: Accessories.js  Advanced.js  GeneralSettings.js  RemoteManagement.js  SNMP.js  SerialToIP.js  VoiceExtensions.js
apps/admin/src/views/pages/: Login.js
apps/arch/: arch_with_cloud_broker.c4  basic_arch.c4  external-providers.c4  platform.c4  project.json  spec.c4  users.c4  views.c4
apps/docs/: .npmrc  global.css  netlify.toml  next.config.mjs  package.json  project.json  tsconfig.json
apps/docs-e2e/: package.json  playwright.config.ts
apps/docs/assets/: qnx-logo-symbol
apps/docs/content/docs/: authoring-documentation.mdx  design-systems.mdx  diataxis-model.mdx  features.mdx  getting-started.mdx  glossary.mdx  index.mdx  iridium-model.mdx  market-research.mdx  meta.json  mono-repo.mdx  skylink-setup.mdx  tech-stack.mdx  trunk-based.mdx
apps/docs/src/app/: layout.config.tsx  layout.tsx
apps/docs/src/app/home/: page.tsx
apps/router/: project.json  shell.nix
apps/slides/: global-bottom.vue  netlify.toml  progress-report-slides.md  project.json  slides.md
apps/slides/public/: GitHub_Invertocat_Light.png:Zone.Identifier
infra/: shell.nix  zellij.custom.kdl  zellij.layout.kdl
libs/docs/: global.css
libs/mqtt_daemon_c++/cpp_daemon/: CMakeLists.txt  libpaho-mqtt3as.dylib  libpaho-mqttpp3.1.5.1.dylib  mqtt_daemon.cpp  mqtt_daemon_cpp
libs/shared/: project.json
libs/shared/ui/: background-beams-with-collision.tsx  colourful-text.tsx  index.ts  lamp.tsx  terminal.tsx
scaffold-examples/fumadocs-starter/: README.md  package.json  pnpm-lock.yaml  project.json
(+1 files in other folders)
